src/test/ui/rfc-2632-const-trait-impl/impl-opt-out-trait.stderr
error: expected a trait, found type
  --> $DIR/impl-opt-out-trait.rs:8:6
   |
LL | impl ?const T for S {}
   |      ^^^^^^^^

error: aborting due to previous error

